The test of the new auto generated navbar; style sheet adjustment to fix the overlap.

--- a/style.css
+++ b/style.css
@@ -357,7 +357,7 @@ i, span {
 
 #sidebar.active {
     min-width: 80px;
-    max-width: 80px;
+    max-width: 150px;
     text-align: center;
 }
 
